@@ -15,5 +15,7 @@ jobs:
         run: mkdir build && cd build && cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug ..
       - name: build
         run: cd build && cmake --build . --target install
-      - name: Kernel  run
-        run: cd build/binary/bin && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:../lib &&./Kernel -c ./test/test_kernel.json & && && ./test_rtc
+      - name: Testing
+        run: |
+         cd build/binary/bin && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:../lib
+         (timeout --signal=SIGABRT 10 ./Kernel -c ./test/test_kernel.json &) && (timeout --signal=SIGABRT 10 ./test_rtc) && kill -SIGINT `pgrep Kernel`
