@@ -1,3 +1,7 @@
+Kernel version:0.2
+-------------------
+  - Add background mode (option -w of command line)
+  
 Kernel version:0.1
 -------------------
   - First release
